Fix overlapped breadcrumb on mobile devices

--- a/eionet/theme/theme/less/breadcrumbs.custom.less
+++ b/eionet/theme/theme/less/breadcrumbs.custom.less
@@ -8,13 +8,17 @@
   ol {
     padding: 4px 0;
 
+    li:first-child {
+      padding-left: 0;
+    }
+
     li {
       font-size: 14px;
-      padding: 0 20px 0 0;
+      padding: 0 6px 0 20px;
+      line-height: inherit;
 
       a {
         color: @text-color;
-
         &:hover,
         &:focus {
           color: @orange-color;
@@ -33,8 +37,8 @@
       content:"\e258";
       font-family: 'Glyphicons Halflings';
       border: none;
-      top: 1px;
-      left: -18px;
+      top: 5px;
+      left: 0;
       color: #333;
       font-size: 9px;
     }
