--- a/eionet/theme/theme/less/footer.custom.less
+++ b/eionet/theme/theme/less/footer.custom.less
@@ -16,10 +16,11 @@
       .footer-nav-item {
         list-style-type: none;
         display: inline-block;
+        color: #fff;
 
         .footer-nav-link {
-          color: #fff;
           font-size: 16px;
+          color: #fff;
           &:hover {
             color: #fff;
             text-decoration: underline;
